2010-04-11  Sam Steingold  <sds@gnu.org>

	fix bug#2795278: when quitting on signals, do not enter the debugger
	* lispbibl.d (quit_on_signal_in_progress): declare
	* error.d (signal_and_debug): quit if quit_on_signal_in_progress
	* debug.d (break_driver): ditto
	* spvw_sigterm.d (quit_on_signal_in_progress): make global

2010-04-02  Sam Steingold  <sds@gnu.org>

	* pathname.d (SAVEMEM): use nullp(.) instead of eq(NIL,.)
	* zthread.d (MAKE-MUTEX, MUTEX-LOCK): ditto

2010-03-30  Arseny Slobodyuk  <ampy@users.sourceforge.net>

	Fix for a bug#2813561 with cygwin symlinks:
	lack of discrimination between cygwin symlinks, used in build
	process and other Windows shortcuts.
	* w32shell.c (win_shortcut_hdr): lnk file header
	(cmp_shortcut_header, is_cygwin_symlink): new static functions
	(resolve_shell_shortcut): use is_cygwin_symlink

2010-03-29  Sam Steingold  <sds@gnu.org>

	* condition.lisp (prompt-for-new-value): terminate the prompt for
	the new value with (PROMPT-FINISH) instead of ": " to indicate that
	this is a regular prompt and the value will be evaluated
	* macros2.lisp (prompt-for-new-value-string): ditto
	Suggested by Pascal J. Bourguignon <pjb@informatimago.com>

2010-03-26  Sam Steingold  <sds@gnu.org>

	* condition.lisp (prompt-for-new-value): EVAL the value entered by
	the user

2010-03-25  Sam Steingold  <sds@gnu.org>

	* modules/libsvm/configure.in: on ubuntu libsvm is managed by
	pkg-config which seems rather silly because there is no real
	connection between gnome and libsvm;
	we must support both pkg-config and non-pkg-config installations

2010-03-24  Sam Steingold  <sds@gnu.org>

	* modules/libsvm/libsvm.lisp: remove DEFAULT-FOREIGN-LIBRARY

2010-03-24  Sam Steingold  <sds@gnu.org>

	* m4/general.m4 (CL_MODULE_COMMON_CHECKS): require CL_PROG_LN_S
	* modules/berkeley-db/Makefile.in, modules/clx/new-clx/Makefile.in:
	* modules/dbus/Makefile.in, modules/dirkey/Makefile.in:
	* modules/fastcgi/Makefile.in, modules/gdbm/Makefile.in: